fix: is_deleted, download_count
