# docs/swagger.json
@@ -216,9 +216,9 @@
                 }
             }
         },
-        "/info": {
+        "/list": {
             "get": {
-                "description": "get the information of server.",
+                "description": "List all items.",
                 "consumes": [
                     "*/*"
                 ],
@@ -228,15 +228,7 @@
                 "tags": [
                     "root"
                 ],
-                "summary": "Show the information of server.",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "api name",
-                        "name": "api",
-                        "in": "query"
-                    }
-                ],
+                "summary": "List all items.",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -251,7 +243,8 @@
             "post": {
                 "description": "Upload text item.",
                 "consumes": [
-                    "*/*"
+                    "*/*",
+                    "text/plain"
                 ],
                 "produces": [
                     "application/json"
@@ -451,10 +444,10 @@
                 "expireTime": {
                     "type": "string"
                 },
-                "fileId": {
+                "filename": {
                     "type": "string"
                 },
-                "filename": {
+                "id": {
                     "type": "string"
                 },
                 "isEncrypted": {
@@ -483,7 +476,7 @@
                 "expireTime": {
                     "type": "string"
                 },
-                "textId": {
+                "id": {
                     "type": "string"
                 },
                 "uploadDate": {
